--- a/index.html
+++ b/index.html
@@ -308,10 +308,7 @@
                         <img src="https://picsum.photos/seed/pub1/300/350" class="person-img" alt="นักวิชาการสาธารณสุข">
                         <div style="padding: 1.5rem;"><span style="color:var(--primary-color);font-weight:600;">นักวิชาการสาธารณสุข</span><br>สาธารณสุขอ. วิชัย ขยัน</div>
                     </div>
-                    <div class="person-card">
-                        <img src="https://picsum.photos/seed/tcm1/300/350" class="person-img" alt="แพทย์แผนไทย">
-                        <div style="padding: 1.5rem;"><span style="color:var(--primary-color);font-weight:600;">ผู้เชี่ยวชาญการแพทย์แผนไทย</span><br>พย.บ. มานี มีตา</div>
-                    </div>
+                    <!-- ลบ ผู้เชี่ยวชาญการแพทย์แผนไทย ออกแล้ว -->
                 </div>
             </div>
         </section>
@@ -329,7 +326,6 @@
                         <div class="info-item"><span style="font-size:1.4rem;">📧</span> contact@klongnoi-hospital.go.th</div>
                     </div>
                     <div class="map-container">
-                        <!-- แผนที่ที่ตั้งตามพิกัดที่ต้องการ -->
                         <iframe 
                             width="100%" 
                             height="100%" 
