--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <div class="hero-content">
                 <h1>บริการด้านสุขภาพครบวงจร<br>ใกล้บ้าน ได้มาตรฐาน</h1>
                 <p>พร้อมดูแลสุขภาพคุณและครอบครัวด้วยทีมแพทย์และเจ้าหน้าที่ที่เชี่ยวชาญ เพื่อสุขภาพที่ดีของประชาชนในชุมชน</p>
-                <a href="#contact" class="btn-hero">นัดหมายรักษา / ติดต่อเรา</a>
+                <a href="#contact" class="btn-hero">ติดต่อเรา</a>
                 
                 <div class="feature-list">
                     <div class="feature-item">✅ ปรึกษาแพทย์ทั่วไป</div>
@@ -557,3 +557,4 @@
     </script>
 </body>
 </html>
+
